Bug #190079.  Crasher.  Check length of string before calling |Last| on it.  r=jkeiser,sr=scc,a=roc